[package]
name = "cobalt-launcher"
version = "0.1.0"
build = "build.rs"
authors = ["Steele Scott <steele@steele.gg>" , "Tyler Hill <tyler@oxide.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.11"