[package]
name = "cobalt-launcher"
version = "0.1.0"
build = "build.rs"
authors = ["Steele Scott <steele@steele.gg>" , "Tyler Hill <tyler@oxide.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
attohttpc = "0.17.0"
base64 = "0.13.0"
dirs = "3.0.2"
obfstr = "0.3.0"
win-utils = { path = "../shared/win-utils" }
bindings = { path = "../shared/bindings" }
xz2 = "0.1.6"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.11"