[package]
name = "cobalt"
version = "0.1.0"
build = "build.rs"
authors = ["Steele Scott <steele@steele.gg>", "Tyler Hill <tyler@oxide.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = "0.17.0"
base64 = "0.13.0"
eyre = "0.6.5"
bindings = { path = "bindings" }
colored = "2.0.0"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.11"